Resized some bell headings

--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -58,7 +58,7 @@
    "id": "12e8ce0d-a1dc-4bc4-b81b-b08df2c68468",
    "metadata": {},
    "source": [
-    "## The problem\n",
+    "## Background\n",
     "\n",
     "In many calculations throughout quantum mechanics, you start with a known state of a system, and that state is typically known through a measurement. Today we want to answer the question, “What can you say about a particle's state prior to any measurement?” An obvious corollary is, “How can we know, if we're not allowed to measure?”\n",
     "\n",
@@ -74,7 +74,7 @@
    "id": "bea5497b-5b82-49ee-8164-b96e4fbf1e2e",
    "metadata": {},
    "source": [
-    "## Setup of the thought experiment: entanglement of spin\n",
+    "### Setup of the thought experiment: entanglement of spin\n",
     "\n",
     "There are processes in which a particle with no spin decays into two particles that each have spin. Since spin is a kind of angular momentum, the law of conservation of angular momentum would suggest that the two outcoming particles must have spins exactly anti-aligned. Indeed this is experimentally observed.\n",
     "\n",
@@ -98,7 +98,7 @@
    "id": "f490c508-3868-4c3e-9f88-79f16b1bf95c",
    "metadata": {},
    "source": [
-    "## Our options\n",
+    "### Our options\n",
     "\n",
     "Let us restate the two historical viewpoints, for clarity:\n",
     "\n",
@@ -153,7 +153,9 @@
    "id": "d0f267c4-1205-46ef-9f86-b1b46bf45f5a",
    "metadata": {},
    "source": [
-    "## What does Einstein's option (hidden variables) predict?\n",
+    "## Predictions\n",
+    "\n",
+    "### What does Einstein's option (hidden variables) predict?\n",
     "\n",
     "If Einstein's option is true, then any given pair of $e+$ and $e-$ will have a set of vector components to their spins. For example, the electron might have components $(+\\hat{a},-\\hat{b}, +\\hat{c})$, in which case the positron must have components $(-\\hat{a},+\\hat{b}, -\\hat{c})$. We are only specifying here the sign of the projection on each axis, not the magnitude. Imagine we allow a very large number $N$ of such decays to take place, and we collect measurements to populate the table below.\n",
     "\n",
@@ -253,7 +255,7 @@
    "id": "7286b152-cf3e-4777-bd5e-e862fa6f57b2",
    "metadata": {},
    "source": [
-    "## What does Born's option (non-deterministic quantum mechanics) predict?\n",
+    "### What does Born's option (non-deterministic quantum mechanics) predict?\n",
     "\n",
     "Lucas will pick some axis and find the spin of one particle to be in either the positive or negative direction. Whatever he obtains, let us orient our axes such that the $z$ axis is that direction. Then we can write the initial state after the decay of the meson and before any measurement as\n",
     "$$\n",
@@ -377,7 +379,7 @@
    "id": "90e79abd-7380-49a7-aae1-bb373a6b2ce1",
    "metadata": {},
    "source": [
-    "## Wow\n",
+    "### Wow\n",
     "\n",
     "We just showed that\n",
     "\n",
@@ -606,7 +608,7 @@
    "id": "49ce89c2-0f85-4562-8af5-502547764214",
    "metadata": {},
    "source": [
-    "## From physical experiment to quantum circuits\n",
+    "### From physical experiment to quantum circuits\n",
     "\n",
     "From the operations of these gates, we can see, for example, that the kets in the expressions for $P_{++}$:\n",
     "$$\n",
@@ -1331,6 +1333,7 @@
  ],
  "metadata": {
   "description": "Learn what measurement statistics are predicted by hidden variables and by quantum mechanics, and check which is correct using a real quantum computer.",
+  "in_page_toc_max_heading_level": 3,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1349,7 +1352,6 @@
    "version": "3"
   },
   "title": "Bell's inequality with Qiskit",
-  "in_page_toc_max_heading_level": 3,
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {},
