added in_page_toc_max_heading_level to uncertainty and reset some headings

--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -386,7 +386,8 @@
    "id": "258d66a0-ddfc-4c69-8943-37efb7c09b40",
    "metadata": {},
    "source": [
-    "By default, states in Qiskit are initialized to the $|0\\rangle$ state. So it is no surprise that almost all of the first measurements yeilded $|0\\rangle$. Note however, that there was almost an even split in the second measurement (the one giving information about projections of the state onto $x$). It seems like this state that gives us a very predictable outcome of measurements along $z$ gives us a very unpredictable set of outcomes for measurements along $x$.\n",
+    "By default, states in Qiskit are initialized to the $|0\\rangle$ state. So it is no surprise that almost all of the first measurements yeilded $|0\\rangle$. Note however, that there was almost an even split in the second measurement (the one giving information about projections of the state onto $x$). It seems like this state that gives us a very predictable outcome of measurements along $z$ gives us a very unpredictable set of outcomes for measurements along $x$. Let's explore this.\n",
+    "\n",
     "What happens if the make the measurements in the opposite order? We could start by using the Hadamard gate to obtain statistics on the probability of $|0\\rangle$ being measured in $|\\pm\\rangle_x$. Then for the second measurement, we will change back to the $z$ basis using a second Hadamard gate."
    ]
   },
@@ -504,6 +505,8 @@
    "id": "292b878f-1792-4f55-8991-49e37c7db58b",
    "metadata": {},
    "source": [
+    "## Calculating uncertainty\n",
+    "\n",
     "We can quantify this using uncertainty, or variance. The \"uncertainty\" is often defined to be the square root of the \"variance\" of a distribution. That is, the uncertainty for some observable $S$ is denoted $\\Delta S$ and is given by\n",
     "\n",
     "$$\n",
@@ -965,6 +968,8 @@
    "id": "26f11700-d6be-4ce1-9f97-b2d47ea933ec",
    "metadata": {},
    "source": [
+    "## Testing uncertainty relations\n",
+    "\n",
     "The test above only demonstrated the validity of the uncertainty relation for a single choice of state vector $|\\psi\\rangle = |+\\rangle_x$. To convince ourselves that this is generally consistent with experiment, we should carry out similar calculations using estimator for many choices of the state vector. Let's start by rotating our state vector away from the $z$ axis, using an ```RY``` gate to produce different initial states using a parameter $\\theta$."
    ]
   },
@@ -1400,6 +1405,7 @@
    "version": "3"
   },
   "title": "Exploring uncertainty with Qiskit",
+  "in_page_toc_max_heading_level": 3,
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {},
