--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -1352,6 +1352,8 @@
    "version": "3"
   },
   "title": "Bell's inequality with Qiskit",
+  "in_page_toc_min_heading_level": 2,
+  "in_page_toc_max_heading_level": 2,
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {},
