--- a/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
@@ -74,7 +74,7 @@
    "id": "bcf4cb9b-7e3a-49f0-9d0d-756fb42eaae3",
    "metadata": {},
    "source": [
-    "## Classical coin\n",
+    "### Classical coin\n",
     "\n",
     "Let's start with a classical coin. Toss a coin, and it will land either heads up or heads down, with 50$~$% chance of each. While in *principle*, one could calculate which side the coin will land on if they knew the precise initial conditions of the coin and the force/torque of the flip, in *practice*, there is no way to know a priori which side the coin will land on. That's why we use the coin flip as a canonical example of a *classical probabilistic state*, where the outcome is essentially random. We can write the state of the coin before it lands to reflect this 50/50 probability:\n",
     "\n",
@@ -124,7 +124,7 @@
    "id": "6f2bc32b-cb77-40fc-849a-e1b9de46b813",
    "metadata": {},
    "source": [
-    "## Quantum coin\n",
+    "### Quantum coin\n",
     "\n",
     "We can create a similar probabilistic state using a qubit on our quantum computer. Like the coin flip, a qubit also can be measured in two possible states: $|0\\rangle$ and $|1\\rangle$. We create the probabilistic, \"superposition\" state by starting in the state $|0\\rangle$, and then applying something called a Hadamard gate to the qubit. This puts it in an equal superposition of $|0\\rangle$ and $|1\\rangle$. Note that while this superposition state may look and behave like the coin at first blush, we will soon see that there is much more to it than that. The point of this module is to show you that a superposition is not the same as a classical coin flip.\n",
     "\n",
@@ -557,7 +557,7 @@
    "id": "ace0c3e8-e9b7-4fc9-a312-78c0264a171a",
    "metadata": {},
    "source": [
-    "## The quantum phase\n",
+    "### The quantum phase\n",
     "\n",
     "The key difference of the quantum coin is that it has another quality that the classical coin does not. Remember that in a classical probabilistic state,\n",
     "\n",
@@ -1152,7 +1152,8 @@
    "id": "3425eb14-a8fd-4894-83a8-268a93733795",
    "metadata": {},
    "source": [
-    "## Concepts, questions, and problems\n",
+    "## Questions\n",
+    "\n",
     "### Critical concepts:\n",
     "\n",
     "- While the measurement of a qubit in a superposition is probabilistic, like flipping a coin, the superposition state itself behaves differently than a flipping coin.\n",
@@ -1207,6 +1208,8 @@
  ],
  "metadata": {
   "description": "Learn about superposition and what it means for measurements on quantum computers.",
+  "in_page_toc_max_heading_level": 2,
+  "in_page_toc_min_heading_level": 2,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
