Set up context-based restrictions file

--- a/docs/security/index.mdx
+++ b/docs/security/index.mdx
@@ -13,3 +13,4 @@ This section contains topics related to data handling, security, and compliance.
 * [Understanding your responsibilities when using Qiskit Runtime](/docs/security/responsibilities)
 * [High availability](/docs/security/ha-dr)
 * [Activity tracking events for Qiskit Runtime](/docs/security/observability)
+* [Protecting Qiskit Runtime Service resources with context-based restrictions](/docs/security/context-based-restrictions)
