--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "bf16b90b-d77a-477b-b432-963f8b81feed",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
     "res = job.result()\n",
     "\n",
     "# Run the job on the Aer simulator with noise model from real backend\n",
-    "# job = estimator_sim.run([[qc_isa,obs_isa]])\n",
+    "# job = noisy_estimator.run([[qc_isa,obs_isa]])\n",
     "# res=job.result()\n",
     "\n",
     "# Step 4: Return the result in classical form, and analyze.\n",
@@ -1387,6 +1387,8 @@
  ],
  "metadata": {
   "description": "Learn what physical measurements affect each other and explore fundamental uncertainty in quantum mechanics using a real quantum computer",
+  "in_page_toc_max_heading_level": 2,
+  "in_page_toc_min_heading_level": 2,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1405,8 +1407,6 @@
    "version": "3"
   },
   "title": "Exploring uncertainty with Qiskit",
-  "in_page_toc_max_heading_level": 2,
-  "in_page_toc_min_heading_level": 2,
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {},
