Added cautionary note about handling tokens and links to guides

--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -962,7 +962,9 @@
    "source": [
     "### Step 2: Optimize your quantum circuit for running on real hardware\n",
     "\n",
-    "Although we initially used a simulator to debug our code, we really want to run on real hardware. After all, a simulator is just pretending to be quantum mechanical, based on the equations above. If the simulator told us those equations were correct, that wouldn't do much to convince us. We want a real quantum computer to tell us what's happening! So we'll select the quantum computer we want to use. Sometimes it might be important to pick a specific device that has properties you want, but often we simply want to use whatever device is least busy."
+    "Although we initially used a simulator to debug our code, we really want to run on real hardware. After all, a simulator is just pretending to be quantum mechanical, based on the equations above. If the simulator told us those equations were correct, that wouldn't do much to convince us. We want a real quantum computer to tell us what's happening! So we'll select the quantum computer we want to use. Sometimes it might be important to pick a specific device that has properties you want, but often we simply want to use whatever device is least busy.\n",
+    "\n",
+    "Syntax is copied below for saving your credentials upon first use. Please take care to delete this information from the notebook once it is saved to your environment, so that your credentials are not accidentally shared when you share the notebook. See [this page](/docs/en/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) for more guidance, and see [this page](/docs/en/guides/cloud-setup-untrusted) specifically for working in an untrusted environment."
    ]
   },
   {
@@ -974,7 +976,7 @@
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# Syntax for first saving your token\n",
+    "# Syntax for first saving your token. Delete these lines after saving your credentials.\n",
     "# QiskitRuntimeService.save_account(channel='ibm_quantum_platform', instance = '<MY_IBM_INSTANCE_CRN>', token='<MY_IBM_QUANTUM_TOKEN>', overwrite=True, set_as_default=True)\n",
     "# service = QiskitRuntimeService(channel='ibm_quantum_platform')\n",
     "\n",
@@ -1333,7 +1335,8 @@
  ],
  "metadata": {
   "description": "Learn what measurement statistics are predicted by hidden variables and by quantum mechanics, and check which is correct using a real quantum computer.",
-  "in_page_toc_max_heading_level": 3,
+  "in_page_toc_max_heading_level": 2,
+  "in_page_toc_min_heading_level": 2,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1352,8 +1355,6 @@
    "version": "3"
   },
   "title": "Bell's inequality with Qiskit",
-  "in_page_toc_min_heading_level": 2,
-  "in_page_toc_max_heading_level": 2,
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {},
