--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -93,7 +93,9 @@
     "\n",
     "We will generally follow these steps, though we may not always explicitly label them.\n",
     "\n",
-    "Let's start by loading some necessary packages including Runtime primitives. We will also select the least-busy quantum computer available to us."
+    "Let's start by loading some necessary packages including Runtime primitives. We will also select the least-busy quantum computer available to us.\n",
+    "\n",
+    "Syntax is copied below for saving your credentials upon first use. Please take care to delete this information from the notebook once it is saved to your environment, so that your credentials are not accidentally shared when you share the notebook. See [this page](/docs/en/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) for more guidance, and see [this page](/docs/en/guides/cloud-setup-untrusted) specifically for working in an untrusted environment."
    ]
   },
   {
@@ -108,7 +110,7 @@
     "# Load the Qiskit Runtime service\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# Syntax for first saving your token\n",
+    "# Syntax for first saving your token.  Delete these lines after saving your credentials.\n",
     "# QiskitRuntimeService.save_account(channel='ibm_quantum_platform', instance = '<MY_IBM_INSTANCE_CRN>', token='<MY_IBM_QUANTUM_TOKEN>', overwrite=True, set_as_default=True)\n",
     "# service = QiskitRuntimeService(channel='ibm_quantum_platform')\n",
     "\n",
