--- a/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -1425,7 +1425,7 @@
    "id": "fbf48a0c-beaa-4ebe-a88c-213b940cf079",
    "metadata": {},
    "source": [
-    "### Acknowledgements\n",
+    "### Acknowledgments\n",
     "\n",
     "[1] By Tatoute - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=34095239"
    ]
