--- a/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -111,7 +111,7 @@
     "![Silver atoms traveling through an inhomogeneous magnetic field, and being deflected up or down depending on their spin. Classically, we would expect a continuous distribution on the screen, but in the experiment we see two distinct points.](/learning/images/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit/sg-device.avif)\n",
     "\n",
     "\n",
-    "Fig. Stern–Gerlach experiment[[1]](#acknowledgements): Silver atoms traveling through an inhomogeneous magnetic field, and being deflected up or down depending on their spin. Classically, we would expect a continuous distribution on the screen, but in the experiment we see two distinct points.\n",
+    "Fig. Stern–Gerlach experiment[[1]](#acknowledgments): Silver atoms traveling through an inhomogeneous magnetic field, and being deflected up or down depending on their spin. Classically, we would expect a continuous distribution on the screen, but in the experiment we see two distinct points.\n",
     "\n",
     "Neutral silver atoms were heated in an oven. As a beam of silver atoms streamed from the oven, beam collimators were used to select only atoms traveling near the center of the inhomogeneous magnetic field. Of course, some atoms deviate a bit to the left or right, and experience a weaker gradient in the field, or no gradient at all. So, we are not overly concerned with the behavior of atoms far to the left or right. We are interested in what happens to the atoms that travel down the center of the channel, where the magnetic field gradient will yield a force deflecting the atoms in the $z$-direction only.\n",
     "\n",
