Adjusting simulator syntax in Qiskit in Classroom modules (#3815)
Fixes #3813

---------

Co-authored-by: abbycross <across@us.ibm.com>

--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -20,11 +20,24 @@
     "- `qiskit-ibm-runtime` v0.40.1 or newer\n",
     "- `qiskit-aer` v0.17.0 or newer\n",
     "- `qiskit.visualization`\n",
+    "- `numpy`\n",
+    "- `pylatexenc`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
     "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide.\n",
     "\n",
     "This module was tested and used 12 seconds of QPU time. This is an estimate only. Your actual usage may vary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f417af00-e7c2-4eda-a49c-aa7c48240b4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment and modify this line as needed to install dependencies\n",
+    "#!pip install 'qiskit>=2.1.0' 'qiskit-ibm-runtime>=0.40.1' 'qiskit-aer>=0.17.0' 'numpy' 'pylatexenc'"
    ]
   },
   {
@@ -45,7 +58,7 @@
    "id": "12e8ce0d-a1dc-4bc4-b81b-b08df2c68468",
    "metadata": {},
    "source": [
-    "## The problem\n",
+    "## Background\n",
     "\n",
     "In many calculations throughout quantum mechanics, you start with a known state of a system, and that state is typically known through a measurement. Today we want to answer the question, “What can you say about a particle's state prior to any measurement?” An obvious corollary is, “How can we know, if we're not allowed to measure?”\n",
     "\n",
@@ -61,7 +74,7 @@
    "id": "bea5497b-5b82-49ee-8164-b96e4fbf1e2e",
    "metadata": {},
    "source": [
-    "## Setup of the thought experiment: entanglement of spin\n",
+    "### Setup of the thought experiment: entanglement of spin\n",
     "\n",
     "There are processes in which a particle with no spin decays into two particles that each have spin. Since spin is a kind of angular momentum, the law of conservation of angular momentum would suggest that the two outcoming particles must have spins exactly anti-aligned. Indeed this is experimentally observed.\n",
     "\n",
@@ -85,7 +98,7 @@
    "id": "f490c508-3868-4c3e-9f88-79f16b1bf95c",
    "metadata": {},
    "source": [
-    "## Our options\n",
+    "### Our options\n",
     "\n",
     "Let us restate the two historical viewpoints, for clarity:\n",
     "\n",
@@ -140,7 +153,9 @@
    "id": "d0f267c4-1205-46ef-9f86-b1b46bf45f5a",
    "metadata": {},
    "source": [
-    "## What does Einstein's option (hidden variables) predict?\n",
+    "## Predictions\n",
+    "\n",
+    "### What does Einstein's option (hidden variables) predict?\n",
     "\n",
     "If Einstein's option is true, then any given pair of $e+$ and $e-$ will have a set of vector components to their spins. For example, the electron might have components $(+\\hat{a},-\\hat{b}, +\\hat{c})$, in which case the positron must have components $(-\\hat{a},+\\hat{b}, -\\hat{c})$. We are only specifying here the sign of the projection on each axis, not the magnitude. Imagine we allow a very large number $N$ of such decays to take place, and we collect measurements to populate the table below.\n",
     "\n",
@@ -240,7 +255,7 @@
    "id": "7286b152-cf3e-4777-bd5e-e862fa6f57b2",
    "metadata": {},
    "source": [
-    "## What does Born's option (non-deterministic quantum mechanics) predict?\n",
+    "### What does Born's option (non-deterministic quantum mechanics) predict?\n",
     "\n",
     "Lucas will pick some axis and find the spin of one particle to be in either the positive or negative direction. Whatever he obtains, let us orient our axes such that the $z$ axis is that direction. Then we can write the initial state after the decay of the meson and before any measurement as\n",
     "$$\n",
@@ -364,7 +379,7 @@
    "id": "90e79abd-7380-49a7-aae1-bb373a6b2ce1",
    "metadata": {},
    "source": [
-    "## Wow\n",
+    "### Wow\n",
     "\n",
     "We just showed that\n",
     "\n",
@@ -593,7 +608,7 @@
    "id": "49ce89c2-0f85-4562-8af5-502547764214",
    "metadata": {},
    "source": [
-    "## From physical experiment to quantum circuits\n",
+    "### From physical experiment to quantum circuits\n",
     "\n",
     "From the operations of these gates, we can see, for example, that the kets in the expressions for $P_{++}$:\n",
     "$$\n",
@@ -947,20 +962,22 @@
    "source": [
     "### Step 2: Optimize your quantum circuit for running on real hardware\n",
     "\n",
-    "Although we initially used a simulator to debug our code, we really want to run on real hardware. After all, a simulator is just pretending to be quantum mechanical, based on the equations above. If the simulator told us those equations were correct, that wouldn't do much to convince us. We want a real quantum computer to tell us what's happening! So we'll select the quantum computer we want to use. Sometimes it might be important to pick a specific device that has properties you want, but often we simply want to use whatever device is least busy."
+    "Although we initially used a simulator to debug our code, we really want to run on real hardware. After all, a simulator is just pretending to be quantum mechanical, based on the equations above. If the simulator told us those equations were correct, that wouldn't do much to convince us. We want a real quantum computer to tell us what's happening! So we'll select the quantum computer we want to use. Sometimes it might be important to pick a specific device that has properties you want, but often we simply want to use whatever device is least busy.\n",
+    "\n",
+    "Syntax is copied below for saving your credentials upon first use. Please take care to delete this information from the notebook once it is saved to your environment, so that your credentials are not accidentally shared when you share the notebook. See [this page](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) for more guidance, and see [this page](/docs/guides/cloud-setup-untrusted) specifically for working in an untrusted environment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "97232ee2-a79e-4cb8-9c1e-cdc2b121827c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# Syntax for first saving your token\n",
-    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
+    "# Syntax for first saving your token. Delete these lines after saving your credentials.\n",
+    "# QiskitRuntimeService.save_account(channel='ibm_quantum_platform', instance = '<MY_IBM_INSTANCE_CRN>', token='<MY_IBM_QUANTUM_TOKEN>', overwrite=True, set_as_default=True)\n",
     "# service = QiskitRuntimeService(channel='ibm_quantum_platform')\n",
     "\n",
     "# Load saved credentials\n",
@@ -1318,6 +1335,8 @@
  ],
  "metadata": {
   "description": "Learn what measurement statistics are predicted by hidden variables and by quantum mechanics, and check which is correct using a real quantum computer.",
+  "in_page_toc_max_heading_level": 2,
+  "in_page_toc_min_heading_level": 2,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
