--- a/learning/modules/computer-science/quantum-key-distribution.ipynb
+++ b/learning/modules/computer-science/quantum-key-distribution.ipynb
@@ -45,11 +45,11 @@
    "id": "f431a6f8-4c58-4549-9d32-fc4e2ba777aa",
    "metadata": {},
    "source": [
-    "## A brief intro to cryptography\n",
-    "\n",
-    "### Simple replacement\n",
+    "## Introduction and motivation\n",
     "\n",
     "There are infinitely many ways of encrypting and decrypting information, and literally thousands of ways have been well-studied. Here, we will restrict ourselves to a very early and very simple method of encryption, called \"simple replacement\", in order to focus on the quantum part of this protocol. The quantum part could be adapted to many other protocols with relatively few changes.\n",
+    "\n",
+    "### Simple replacement\n",
     "\n",
     "A simple replacement encryption is one in which one letter or number is replaced with another, such that there is a 1:1 mapping from the letters and numbers in a message, to the letters and numbers being used in an encrypted sequence. A pop-culture instance of these is the cryptoquote or crypogram puzzle, in which a quote or phrase is encrypted using simple replacement, and the player is tasked with decrypting it. These are easy to solve if they are long enough. Consider the example:\n",
     "\n",
@@ -1247,7 +1247,7 @@
    "id": "4bb09e34-a249-4ab8-be2b-0205fe1ffefb",
    "metadata": {},
    "source": [
-    "## Review and questions\n",
+    "## Questions\n",
     "\n",
     "### Critical concepts\n",
     "\n",
@@ -1256,8 +1256,6 @@
     "- An encryption/decryption key (a one-time pad) can be shared between two friends using quantum states.\n",
     "- Two friends randomly choosing a measurement basis means that half the time they will choose differently, and will have to toss out the information on those qubits.\n",
     "- The random choice of measurement basis also ensures that an eavesdropper cannot know the initial state prepared, and thus cannot recreate the sent state. This ensures that the eavesdropping will be detected.\n",
-    "\n",
-    "## Questions\n",
     "\n",
     "### T/F questions\n",
     "\n",
@@ -1310,6 +1308,8 @@
  ],
  "metadata": {
   "description": "This module explores how to use quantum states to securely share a key for encryption and detect potential eavesdroppers.",
+  "in_page_toc_max_heading_level": 2,
+  "in_page_toc_min_heading_level": 2,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
