--- a/learning/modules/computer-science/deutsch-jozsa.ipynb
+++ b/learning/modules/computer-science/deutsch-jozsa.ipynb
@@ -45,7 +45,7 @@
    "id": "34b2aac3-848f-46b4-8c95-8236b6ad7f8e",
    "metadata": {},
    "source": [
-    "## 1. Intro\n",
+    "## Intro\n",
     "\n",
     "In the early 1980's, quantum physicists and computer scientists had a vague notion that quantum mechanics could be harnessed to make computations that were far more powerful than classical computers can make. Their reasoning was this: it's difficult for a classical computer to simulate quantum systems, but a *quantum* computer should be able to do it more efficiently. And if a quantum computer could simulate quantum systems more efficiently, perhaps there were other tasks that it could perform more efficiently than a classical computer.\n",
     "\n",
@@ -64,7 +64,7 @@
    "id": "096da154-5663-4f46-8d9e-b6f163260706",
    "metadata": {},
    "source": [
-    "## 2. Quantum parallelism and its limits\n",
+    "## Quantum parallelism and its limits\n",
     "\n",
     "Part of the power of quantum computing is derived from \"quantum parallelism.\" which is essentially the ability to perform operations on multiple inputs at the same time, since the qubit input states could be in a superposition of multiple classically allowed states. HOWEVER, while a quantum circuit might be able to evaluate multiple input states at once, extracting all of that information in one go is impossible.\n",
     "\n",
@@ -339,11 +339,11 @@
    "id": "cda50fdf-c354-4021-9b5a-c8cde5cc5edd",
    "metadata": {},
    "source": [
-    "## 3. Deutsch's Algorithm\n",
+    "## Deutsch's Algorithm\n",
     "\n",
     "While quantum parallelism alone doesn't give us an advantage over classical computers, we can pair this with another quantum phenomena, interference, to achieve a speed-up. The algorithm now known as \"Deutsch's algorithm\" is the first example of an algorithm that accomplishes this.\n",
     "\n",
-    "### 3.1. The Problem\n",
+    "### The Problem\n",
     "\n",
     "Here was the problem:\n",
     "\n",
@@ -363,7 +363,7 @@
    "id": "a34f1c24-0ed5-4458-8d4e-5957c691cadb",
    "metadata": {},
    "source": [
-    "### 3.2 The Algorithm\n",
+    "### The Algorithm\n",
     "\n",
     "The way Deutsch approached this problem was through the \"query model.\" In the query model, the input function ($f_i(x)$ above) is contained in a \"black box\" — we don't have direct access to its contents, but we can query the black box and it will give us the output of the function. We sometimes say that an \"oracle\" provides this information. See [Lesson 1: Quantum Query Algorithms](/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction) of the Fundamentals of Quantum Algorithms course for more on the query model.\n",
     "\n",
@@ -549,7 +549,7 @@
    "id": "82f6da25-0f9c-47b3-aa24-02482f008383",
    "metadata": {},
    "source": [
-    "## 4. The Deutsch-Jozsa algorithm\n",
+    "## The Deutsch-Jozsa algorithm\n",
     "\n",
     "Deutsch's algorithm was an important first step in demonstrating how a quantum computer might be more efficient than a classical computer, but it was only a modest improvement: it required just one query, compared to two in the classical case. In 1992, Deutsch and his colleague, Richard Jozsa, extended the original two-qubit algorithm to more qubits. The problem remained the same: determine whether a function is *balanced* or *constant*. But this time, the function goes from $n$ bits to a single bit. Either the function returns 0 and 1 an equal number of times (it's *balanced*) or the function returns always 1 or always 0 (it's *constant*).\n",
     "\n",
@@ -823,7 +823,7 @@
    "id": "37d8d1b5-1593-480e-afb9-cdae1debb8ea",
    "metadata": {},
    "source": [
-    "### 4.1. The Bernstein - Vazirani problem\n",
+    "### The Bernstein - Vazirani problem\n",
     "\n",
     "In 1997, Ethan Bernstein and Umesh Vazirani used the Deutsch-Jozsa algorithm to solve a more specific, restricted problem compared to the Deutsch-Jozsa problem. Rather than simply try to distinguish between two different classes of functions, as in the D-J case, Bernstein and Vazirani used the Deutsch-Jozsa algorithm to actually learn a string encoded in a function. Here's the problem:\n",
     "\n",
@@ -1035,7 +1035,7 @@
    "source": [
     "So, with just a single query, the Deutsch-Jozsa algorithm will return the string $s$ used in the function: $f(x)=x \\cdot s$ when we apply it to the Bernstein-Vazirani problem. With a classical algorithm, one would need $n$ queries to solve the same problem.\n",
     "\n",
-    "## 5. Conclusion\n",
+    "## Conclusion\n",
     "\n",
     "We hope that by examining these simple examples, we've given you a better intuition for how quantum computers are able to harness superposition, entanglement, and interference to achieve their power over classical computers.\n",
     "\n",
@@ -1049,7 +1049,7 @@
    "id": "c76273ac-ad3c-4c82-94e8-213e887dc7b7",
    "metadata": {},
    "source": [
-    "## 6. Review and questions\n",
+    "## Questions\n",
     "\n",
     "### Critical concepts\n",
     "- the Deutsch and Deutsch-Jozsa algorithms use quantum parallelism combined with interference to find an answer to a problem faster than a classical computer can.\n",
@@ -1063,8 +1063,6 @@
     "4. T/F The Deutsch-Jozsa algorithm requires multiple function evaluations to determine if a function is constant or balanced.\n",
     "5. T/F The \"Bernstein-Vazirani algorithm\" is actually the same as the Deutsch-Jozsa algorithm, applied to a different problem.\n",
     "6. T/F The Bernstein-Vazirani algorithm can find multiple secret strings simultaneously.\n",
-    "\n",
-    "\n",
     "\n",
     "### Short answer\n",
     "\n",
@@ -1081,6 +1079,8 @@
  ],
  "metadata": {
   "description": "Learn how the Deutsch-Jozsa algorithm uses quantum parallelism and interference to achieve an exponential speedup over classical algorithms.",
+  "in_page_toc_max_heading_level": 2,
+  "in_page_toc_min_heading_level": 2,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
