added first authentication and cautionary notes

--- a/learning/modules/computer-science/quantum-key-distribution.ipynb
+++ b/learning/modules/computer-science/quantum-key-distribution.ipynb
@@ -20,11 +20,23 @@
     "- `qiskit-ibm-runtime` v0.40.1 or newer\n",
     "- `qiskit-aer` v0.17.0 or newer\n",
     "- `qiskit.visualization`\n",
+    "- `numpy`\n",
+    "- `pylatexenc`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
     "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide.\n",
     "\n",
     "This module was tested and used 5 seconds of QPU time. This is an estimate only. Your actual usage may vary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment and modify this line as needed to install dependencies\n",
+    "#!pip install 'qiskit>=2.1.0' 'qiskit-ibm-runtime>=0.40.1' 'qiskit-aer>=0.17.0' 'numpy' 'pylatexenc'"
    ]
   },
   {
@@ -488,12 +500,14 @@
     "\n",
     "This step takes the operations we want to perform and expresses them in terms of the functionality of a specific quantum computer. It also maps our problem onto the layout of the quantum computer.\n",
     "\n",
-    "We will start by loading several packages that are required to communicate with IBM quantum computers. We must also select a backend on which to run. We can either choose the least busy backend, or select a specific backend whose properties we know. Although we will momentarily use a simulator, it is important to use a reasonable noise model in simulation, and it is good to keep the workflow as close as possible to what we will use later for real quantum computers."
+    "We will start by loading several packages that are required to communicate with IBM quantum computers. We must also select a backend on which to run. We can either choose the least busy backend, or select a specific backend whose properties we know. Although we will momentarily use a simulator, it is important to use a reasonable noise model in simulation, and it is good to keep the workflow as close as possible to what we will use later for real quantum computers.\n",
+    "\n",
+    "Syntax is copied below for saving your credentials upon first use. Please take care to delete this information from the notebook once it is saved to your environment, so that your credentials are not accidentally shared when you share the notebook. See [this page](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) for more guidance, and see [this page](/docs/guides/cloud-setup-untrusted) specifically for working in an untrusted environment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8dd83eea-3fae-4ec8-b2d9-22128c6abb93",
    "metadata": {},
    "outputs": [
@@ -509,8 +523,16 @@
     "# Load the Qiskit Runtime service\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# service = QiskitRuntimeService()\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum_platform\")\n",
+    "# Load the Qiskit Runtime service\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "\n",
+    "# Syntax for first saving your token.  Delete these lines after saving your credentials.\n",
+    "# QiskitRuntimeService.save_account(channel='ibm_quantum_platform', instance = '<MY_IBM_INSTANCE_CRN>', token='<MY_IBM_QUANTUM_TOKEN>', overwrite=True, set_as_default=True)\n",
+    "# service = QiskitRuntimeService(channel='ibm_quantum_platform')\n",
+    "\n",
+    "# Load saved credentials\n",
+    "service = QiskitRuntimeService()\n",
+    "\n",
     "\n",
     "# Use the least busy backend, or uncomment the loading of a specific backend like \"ibm_brisbane\".\n",
     "# backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)\n",
