--- a/learning/modules/computer-science/deutsch-jozsa.ipynb
+++ b/learning/modules/computer-science/deutsch-jozsa.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "29468e63-ce36-4eb7-95b4-176788a97e54",
    "metadata": {},
    "outputs": [],
@@ -180,9 +180,9 @@
     "backend_sim = AerSimulator(noise_model=noise_model)\n",
     "sampler_sim = BackendSamplerV2(backend=backend_sim)\n",
     "\n",
-    "\n",
-    "backend_gen = GenericBackendV2(num_qubits=18)\n",
-    "sampler_gen = BackendSamplerV2(backend=backend_gen)"
+    "# One could also define a simulator-based sampler using a generic backend:\n",
+    "#backend_gen = GenericBackendV2(num_qubits=18)\n",
+    "#sampler_gen = BackendSamplerV2(backend=backend_gen)"
    ]
   },
   {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0495256b-2a80-422e-9adf-2fef1c039a6d",
    "metadata": {},
    "outputs": [],
@@ -292,11 +292,7 @@
     "job = sampler.run([qc_isa], shots=1)\n",
     "# job = sampler_sim.run([qc_isa],shots=1) # uncomment this line to run on simulator instead\n",
     "res = job.result()\n",
-    "counts = res[0].data.meas.get_counts()\n",
-    "\n",
-    "# job = sampler_gen.run([qc_isa],shots=1)\n",
-    "# res=job.result()\n",
-    "# counts=res[0].data.c.get_counts()"
+    "counts = res[0].data.meas.get_counts()"
    ]
   },
   {
@@ -521,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "51ad01d0-fa90-4e80-a55d-e55e146e2065",
    "metadata": {},
    "outputs": [],
@@ -531,11 +527,7 @@
     "job = sampler.run([qc_isa], shots=1)\n",
     "# job = sampler_sim.run([qc_isa],shots=1) # uncomment this line to run on simulator instead\n",
     "res = job.result()\n",
-    "counts = res[0].data.c.get_counts()\n",
-    "\n",
-    "# job = sampler_gen.run([qc_isa],shots=1)\n",
-    "# res=job.result()\n",
-    "# counts=res[0].data.c.get_counts()"
+    "counts = res[0].data.c.get_counts()"
    ]
   },
   {
@@ -753,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "974f3db9-1b55-414c-9fe4-d891cf22f78f",
    "metadata": {},
    "outputs": [],
@@ -763,11 +755,7 @@
     "job = sampler.run([qc_isa], shots=1)\n",
     "# job = sampler_sim.run([qc_isa],shots=1) # uncomment this line to run on simulator instead\n",
     "res = job.result()\n",
-    "counts = res[0].data.c.get_counts()\n",
-    "\n",
-    "# job = sampler_gen.run([qc_isa],shots=1)\n",
-    "# res=job.result()\n",
-    "# counts=res[0].data.c.get_counts()"
+    "counts = res[0].data.c.get_counts()"
    ]
   },
   {
@@ -1010,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8fef6a65-227a-4f27-af3e-348513e1cd33",
    "metadata": {},
    "outputs": [],
@@ -1020,11 +1008,7 @@
     "job = sampler.run([qc_isa], shots=1)\n",
     "# job = sampler_sim.run([qc_isa],shots=1) # uncomment this line to run on simulator instead\n",
     "res = job.result()\n",
-    "counts = res[0].data.c.get_counts()\n",
-    "\n",
-    "# job = sampler_gen.run([qc_isa],shots=1)\n",
-    "# res=job.result()\n",
-    "# counts=res[0].data.c.get_counts()"
+    "counts = res[0].data.c.get_counts()"
    ]
   },
   {
