--- a/learning/modules/computer-science/index.mdx
+++ b/learning/modules/computer-science/index.mdx
@@ -11,7 +11,7 @@ This collection of Qiskit in-classroom modules is designed for an undergraduate-
 
 Each module should be started in class with group and instructor support, but can be completed independently or in small groups. All activities can be completed in much less time than the free time allotted as part of the Open Plan available to all users. Simulator options are also built-in in case students accidentally exhaust their free quantum computing time.
 
-Instructors can request versions of these notebooks with answer keys by filling out this [quick survey](https://ibm.biz/classrooms_instructor_key_request) on how the notebooks are being used.
+Instructors can request versions of these notebooks with answer keys and guidance on placement in common curriucla by filling out this [quick survey](https://ibm.biz/classrooms_instructor_key_request) on how the notebooks are being used.
 
 ## Recommended background
 
