--- a/learning/modules/computer-science/quantum-teleportation.ipynb
+++ b/learning/modules/computer-science/quantum-teleportation.ipynb
@@ -1016,6 +1016,8 @@
    "source": [
     "## Questions\n",
     "\n",
+    "Instructors can request versions of these notebooks with answer keys and guidance on placement in common curriucla by filling out this [quick survey](https://ibm.biz/classrooms_instructor_key_request) on how the notebooks are being used.\n",
+    "\n",
     "### Critical concepts\n",
     "\n",
     "- Qubits can be entangled, meaning a measurement of one qubit affects or even determines the state of another qubit.\n",
