--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -1251,6 +1251,10 @@
    "id": "b315516c-53c2-4830-8130-eb535d466a67",
    "metadata": {},
    "source": [
+    "## Questions\n",
+    "\n",
+    "Instructors can request versions of these notebooks with answer keys and guidance on placement in common curriucla by filling out this [quick survey](https://ibm.biz/classrooms_instructor_key_request) on how the notebooks are being used.\n",
+    "\n",
     "### Critical concepts:\n",
     "\n",
     "- There was a historical disagreement about whether quantum states were merely unknown or undetermined by nature prior to measurement, whether quantum mechanics is deterministic or probabilistic.\n",
@@ -1260,8 +1264,6 @@
     "- Entanglement is not just correlations.\n",
     "- We can map real world scenarios to quantum computers.\n",
     "- Hidden variables refers to quantities specified by nature, but unknown to humans; they do not exist in this context.\n",
-    "\n",
-    "## Questions\n",
     "\n",
     "### T/F questions:\n",
     "\n",
