--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -1317,6 +1317,12 @@
    "id": "b89eaae3-6ea9-486c-b93c-55431839d5f1",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    "## Questions\n",
+    "\n",
+    "Instructors can request versions of these notebooks with answer keys and guidance on placement in common curriucla by filling out this [quick survey](https://ibm.biz/classrooms_instructor_key_request) on how the notebooks are being used.\n",
+    "\n",
     "### Critical concepts:\n",
     "\n",
     "- There are uncertainty relations between many sets of physical observables, including position & linear momentum, and components of spin.\n",
@@ -1327,8 +1333,6 @@
     "- An eigenstate $|a\\rangle$ of some operator $A$ will yield a larger uncertainty for an operator $B$ that does not commute with $A$.\n",
     "- Experimental results using a real quantum computer confirm the intuition we gain from matrix representations of physical operators.\n",
     "\n",
-    "\n",
-    "## Questions\n",
     "\n",
     "### T/F Questions:\n",
     "\n",
