--- a/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -1349,7 +1349,7 @@
    "source": [
     "## Questions\n",
     "\n",
-    "Instructors can request versions of these notebooks with answer keys and guidance on placement in common curriucla by filling out this [quick survey](https://ibm.biz/classrooms_instructor_key_request) on how the notebooks are being used.\n",
+    "Instructors can request versions of these notebooks with answer keys and guidance on placement in common curricula by filling out this [quick survey](https://ibm.biz/classrooms_instructor_key_request) on how the notebooks are being used.\n",
     "\n",
     "### Critical concepts:\n",
     "\n",
