caught spelling error missed by linting. descrive -> described

--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -184,7 +184,7 @@
     "\n",
     "### Step 1: Map classical inputs to a quantum problem\n",
     "\n",
-    "In this case, the mapping step is simply expressing the measurements and rotations descrive above in a quantum circuit:"
+    "In this case, the mapping step is simply expressing the measurements and rotations described above in a quantum circuit:"
    ]
   },
   {
