--- a/learning/modules/computer-science/deutsch-jozsa.ipynb
+++ b/learning/modules/computer-science/deutsch-jozsa.ipynb
@@ -106,7 +106,7 @@
     "- Step 3: Execute using Qiskit Runtime Primitives\n",
     "- Step 4: Post-processing and classical analysis\n",
     "\n",
-    "First, let's start by loading some necessary packages, including Runtime primitives. We will also select the least-busy quantum computer available to us.\n",
+    "Let's start by loading some necessary packages, including the Qiskit Runtime primitives. We will also select the least busy quantum computer available to us.\n",
     "\n",
     "Syntax is copied below for saving your credentials upon first use. Please take care to delete this information from the notebook once it is saved to your environment, so that your credentials are not accidentally shared when you share the notebook. See [this page](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) for more guidance, and see [this page](/docs/guides/cloud-setup-untrusted) specifically for working in an untrusted environment."
    ]
