--- a/learning/modules/computer-science/deutsch-jozsa.ipynb
+++ b/learning/modules/computer-science/deutsch-jozsa.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "Let's start by loading some necessary packages, including the Qiskit Runtime primitives. We will also select the least busy quantum computer available to us.\n",
     "\n",
-    "Syntax is copied below for saving your credentials upon first use. Please take care to delete this information from the notebook once it is saved to your environment, so that your credentials are not accidentally shared when you share the notebook. See [this page](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) for more guidance, and see [this page](/docs/guides/cloud-setup-untrusted) specifically for working in an untrusted environment."
+    "There is code below for saving your credentials upon first use. Be sure to delete this information from the notebook after saving it to your environment, so that your credentials are not accidentally shared when you share the notebook. See [Set up your IBM Cloud account](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) and [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) for more guidance."
    ]
   },
   {
