--- a/learning/modules/computer-science/deutsch-jozsa.ipynb
+++ b/learning/modules/computer-science/deutsch-jozsa.ipynb
@@ -358,7 +358,7 @@
     "\n",
     "While quantum parallelism alone doesn't give us an advantage over classical computers, we can pair this with another quantum phenomena, interference, to achieve a speed-up. The algorithm now known as \"Deutsch's algorithm\" is the first example of an algorithm that accomplishes this.\n",
     "\n",
-    "### The Problem\n",
+    "### The problem\n",
     "\n",
     "Here was the problem:\n",
     "\n",
