--- a/learning/modules/computer-science/deutsch-jozsa.ipynb
+++ b/learning/modules/computer-science/deutsch-jozsa.ipynb
@@ -354,7 +354,7 @@
    "id": "cda50fdf-c354-4021-9b5a-c8cde5cc5edd",
    "metadata": {},
    "source": [
-    "## Deutsch's Algorithm\n",
+    "## Deutsch's algorithm\n",
     "\n",
     "While quantum parallelism alone doesn't give us an advantage over classical computers, we can pair this with another quantum phenomena, interference, to achieve a speed-up. The algorithm now known as \"Deutsch's algorithm\" is the first example of an algorithm that accomplishes this.\n",
     "\n",
