--- a/learning/modules/computer-science/quantum-teleportation.ipynb
+++ b/learning/modules/computer-science/quantum-teleportation.ipynb
@@ -593,7 +593,7 @@
     "\n",
     "We will start by loading several packages that are required to communicate with IBM quantum computers. We must also select a backend on which to run. We can either choose the least busy backend, or select a specific backend whose properties we know.\n",
     "\n",
-    "Syntax is copied below for saving your credentials upon first use. Please take care to delete this information from the notebook once it is saved to your environment, so that your credentials are not accidentally shared when you share the notebook. See [this page](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) for more guidance, and see [this page](/docs/guides/cloud-setup-untrusted) specifically for working in an untrusted environment."
+    "There is code below for saving your credentials upon first use. Be sure to delete this information from the notebook after saving it to your environment, so that your credentials are not accidentally shared when you share the notebook. See [Set up your IBM Cloud account](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) and [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) for more guidance."
    ]
   },
   {
